syntax = "proto3";

package userclient;

option go_package = "./user";

// Register
message RegisterRequest {
    string Email = 1;
    string Password = 2;
    string Code = 3;
}
message RegisterResponse {
    int64 Uid = 1;
}
// Register

// CheckEmail
message CheckEmailRequest {
    string Email = 1;
}
message CheckEmailResponse {
    bool Exists = 1;
}
// CheckEmail

// GetUidByEmailAndPwd
message GetUidByEmailAndPwdRequest {
    string Email = 1;
    string Password = 2;
}
message GetUidByEmailAndPwdResponse {
    int64 Uid = 1;
}
// GetUidByEmailAndPwd

// CheckUid
message CheckUidRequest {
    int64 Uid = 1;
}
message CheckUidResponse {
    bool Exists = 1;
}
// CheckUid

// SetVerificationCode
message SetVerificationCodeRequest {
    string key = 1;
    string val = 2;
    int32 expiration = 3;
}

message SetVerificationCodeResponse {
}
// SetVerificationCode

// GetVerificationCode
message GetVerificationCodeRequest {
    string key = 1;
}

message GetVerificationCodeResponse {
    string val = 1;
}
// GetVerificationCode

// ForgetPassword
message ForgetPasswordRequest {
    string email = 1;
    string newPassword = 2;
    string code = 3;
}

message ForgetPasswordResponse {
}
// ForgetPassword

// SetCriticalUserInfo
message SetCriticalUserInfoRequest {
    string password = 1;
}

message SetCriticalUserInfoResponse {
}

// SetCriticalUserInfo

service User {
    rpc Register(RegisterRequest) returns(RegisterResponse);
    rpc CheckEmail(CheckEmailRequest) returns(CheckEmailResponse);
    rpc GetUidByEmailAndPwd(GetUidByEmailAndPwdRequest) returns(GetUidByEmailAndPwdResponse);
    rpc CheckUid(CheckUidRequest) returns(CheckUidResponse);
    rpc SetVerificationCode(SetVerificationCodeRequest) returns (SetVerificationCodeResponse);
    rpc GetVerificationCode(GetVerificationCodeRequest) returns (GetVerificationCodeResponse);
    rpc ForgetPassword(ForgetPasswordRequest) returns (ForgetPasswordResponse);
    rpc SetCriticalUserInfo(SetCriticalUserInfoRequest) returns (SetCriticalUserInfoResponse);
}